--- a/HeroPecApp/ConfigurationForm.resx
+++ b/HeroPecApp/ConfigurationForm.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAALj/AAC4/wAAuP8AALj/ABO4/wA3uP8ABrj/AAC4/wAAuP8AALj/AJW4/wD+uP8A0rj/
+        AFq4/wABuP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAuP8AALj/AAC4/wA8uP8Avrj/AOi4/wBauP8AALj/AAC4/wAeuP8A2Lj/
+        AP+4/wD/uP8Avrj/AAm4/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAC4/wAAuP8AHLj/ANO4/wD/uP8A/7j/AN24/wAwuP8AALj/
+        AGW4/wD+uP8A/7j/AP+4/wC0uP8ABbj/AAC4/wAAuP8AALj/AAC4/wAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALj/AAC4/wASuP8Ayrj/AP+4/wD/uP8A/7j/
+        AL24/wBiuP8AzLj/AP+4/wD/uP8A/7j/AKK4/wABuP8AALj/AAC4/wAAuP8AALj/AAC4/wAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAuP8AALj/AAC4/wCDuP8A/7j/
+        AP+4/wD/uP8A/7j/AP+4/wD/uP8A/7j/AP+4/wD/uP8Anbj/AAC4/wAFuP8AN7j/AHq4/wAnuP8AALj/
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAuP8AALj/AAC4/wAAuP8AALj/
+        ADy4/wDxuP8A/7j/AP+4/wD/uP8A/7j/AP+4/wD/uP8A/7j/AP+4/wDnuP8Ag7j/AKm4/wDtuP8A/7j/
+        AKe4/wAIuP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAC4/wAJuP8AF7j/
+        AAy4/wACuP8AP7j/AO64/wD/uP8A/7j/AP+4/wD/uP8A/7j/AP+4/wD/uP8A/7j/AP+4/wD/uP8A/7j/
+        AP+4/wD/uP8A8rj/AD+4/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALj/
+        AHu4/wDYuP8Axrj/ALC4/wDVuP8A/7j/AP+4/wD/uP8A/7j/APu4/wDwuP8A+rj/AP+4/wD/uP8A/7j/
+        AP+4/wD/uP8A/7j/AP+4/wD4uP8AU7j/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAuP8A3Lj/AP+4/wD/uP8A/7j/AP+4/wD/uP8A/7j/AP+4/wDOuP8AW7j/ADK4/wBUuP8Awbj/
+        AP+4/wD/uP8A/7j/AP+4/wD/uP8A9rj/AHu4/wAIuP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAC4/wD/uP8A/7j/AP+4/wD/uP8A/7j/AP+4/wD/uP8A17j/ACy4/wAAuP8AALj/
+        AAC4/wAguP8Ayrj/AP+4/wD/uP8A/7j/APO4/wBwuP8AA7j/AAC4/wAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAALj/ANG4/wD8uP8A/7j/AP+4/wD/uP8A/7j/AP+4/wB2uP8AALj/
+        AAC4/wAAuP8AALj/AAC4/wBjuP8A/rj/AP+4/wD/uP8Ayrj/AAu4/wAAuP8AALj/AAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAuP8AGLj/AGi4/wDPuP8A/rj/AP+4/wD/uP8A+bj/
+        AEi4/wAAuP8AAAAAAAC4/wAAuP8AALj/ADe4/wDyuP8A/7j/AP+4/wDpuP8AWbj/AAq4/wAAuP8AALj/
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAC4/wAAuP8AALj/ACC4/wDOuP8A/7j/
+        AP+4/wD7uP8AUbj/AAC4/wAAAAAAALj/AAC4/wAAuP8AP7j/APW4/wD/uP8A/7j/AP+4/wD2uP8As7j/
+        AEq4/wAGuP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALj/AAC4/wAAuP8ADrj/
+        AMG4/wD/uP8A/7j/AP+4/wCTuP8AALj/AAC4/wAAuP8AALj/AAC4/wCAuP8A/7j/AP+4/wD/uP8A/7j/
+        AP+4/wD/uP8A57j/ACy4/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAuP8AALj/
+        ABG4/wCYuP8A+7j/AP+4/wD/uP8A/7j/AOy4/wBVuP8AAbj/AAC4/wAAuP8ASLj/AOS4/wD/uP8A/7j/
+        AP+4/wD/uP8A/7j/AP+4/wDmuP8AJbj/AAC4/wAAuP8AALj/AAC4/wAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAC4/wAXuP8Ao7j/AP+4/wD/uP8A/7j/AP+4/wD/uP8A/7j/AO24/wCeuP8AdLj/AJi4/wDpuP8A/7j/
+        AP+4/wD/uP8A/7j/AP+4/wD/uP8A/7j/AL+4/wALuP8ACLj/ADO4/wA6uP8AB7j/AAC4/wAAuP8AALj/
+        AAC4/wAAAAAAALj/AFO4/wD4uP8A/7j/AP+4/wD/uP8A/7j/AP+4/wD/uP8A/7j/AP+4/wD/uP8A/7j/
+        AP+4/wD/uP8A/7j/AP+4/wCtuP8Aabj/AIG4/wCZuP8AULj/AAC4/wBGuP8A7Lj/AOi4/wA1uP8AALj/
+        AAi4/wAguP8AALj/AAC4/wAAuP8AI7j/ANi4/wD/uP8A/7j/AP64/wDyuP8A/7j/AP+4/wD/uP8A/7j/
+        AP+4/wD/uP8A/7j/AP+4/wD/uP8A8rj/ADm4/wAAuP8AALj/AAa4/wACuP8AALj/AFm4/wD/uP8A/7j/
+        AHC4/wABuP8Af7j/ANy4/wBcuP8AAbj/AAC4/wAAuP8Abbj/APG4/wDGuP8Abrj/AD24/wC/uP8A/7j/
+        AP+4/wD/uP8A/7j/AP+4/wD/uP8A/7j/AP+4/wD9uP8AYrj/AAC4/wALuP8Akrj/AJO4/wAiuP8Ab7j/
+        AP+4/wD/uP8A0bj/AJ24/wD2uP8A/7j/AMC4/wALuP8AALj/AAC4/wAKuP8AOrj/ABK4/wAAuP8AALj/
+        AIO4/wD/uP8A/7j/AP+4/wD8uP8A6Lj/APa4/wD/uP8A/7j/AP+4/wCsuP8AAbj/AFe4/wD8uP8A/7j/
+        AN64/wDnuP8A/7j/AP+4/wD/uP8A/7j/AP+4/wD+uP8Acrj/AAC4/wAAuP8AALj/AAC4/wAAuP8AALj/
+        AAC4/wAAuP8Albj/AP+4/wD/uP8A/7j/ALu4/wAouP8AfLj/AP24/wD/uP8A/7j/AOW4/wAjuP8APLj/
+        AOa4/wD/uP8A/7j/AP+4/wD/uP8A/7j/AP+4/wD/uP8A/7j/AOW4/wAluP8AALj/AAAAAAAAAAAAAAAA
+        AAAAAAAAuP8AALj/AAK4/wCouP8A/7j/AP+4/wD8uP8AXbj/AAC4/wANuP8ArLj/AP+4/wD/uP8Au7j/
+        ABm4/wAAuP8AYrj/APe4/wD/uP8A/7j/ANq4/wCOuP8AqLj/APa4/wD/uP8A9rj/AJm4/wB3uP8AWQAA
+        AAAAAAAAAAAAAAAAAAC4/wAAuP8AA7j/AKG4/wD/uP8A/7j/ANW4/wAZuP8AALj/AAC4/wAouP8Atrj/
+        AIu4/wAduP8AALj/AAC4/wA+uP8A7Lj/AP+4/wDluP8AOrj/AAC4/wAFuP8Ajbj/AP+4/wD/uP8A/7j/
+        AP+4/wDzAAAAAAAAAAAAAAAAAAAAALj/AAC4/wAAuP8AHbj/AG+4/wCnuP8AZrj/AAC4/wAAuP8AALj/
+        AAC4/wALuP8AAbj/AAC4/wAwuP8Ao7j/AOG4/wD+uP8A/7j/AK64/wADuP8AALj/AAC4/wA9uP8A9bj/
+        AP+4/wD/uP8A/7j/APgAAAAAAAAAAAAAAAAAAAAAuP8AALj/AAC4/wAAuP8AALj/AAG4/wAAuP8AALj/
+        AAC4/wAAuP8AALj/AAC4/wAAuP8AALj/AHS4/wD/uP8A/7j/AP+4/wD/uP8AuLj/AAa4/wAAuP8AALj/
+        AEe4/wD4uP8A/7j/AOi4/wCTuP8ATgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALj/AAC4/wAAuP8AALj/
+        AAC4/wAAuP8AAAAAAAAAAAAAAAAAAAAAAAC4/wAAuP8AWLj/APO4/wD4uP8A/rj/AP+4/wDxuP8AXrj/
+        AAu4/wAfuP8Asbj/AP+4/wD/uP8Ambj/AAC4/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALj/AAC4/wAPuP8AOrj/AEO4/wCquP8A/7j/
+        AP+4/wDxuP8AyLj/ANm4/wD+uP8A/7j/AP+4/wDduP8AObj/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAuP8AALj/AAC4/wAAuP8AALj/
+        AIy4/wD/uP8A/7j/AP+4/wD/uP8A/7j/AP+4/wD/uP8A/7j/AP+4/wDBuP8AFAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALj/
+        AAC4/wAouP8A4Lj/AP+4/wD/uP8A+7j/AP+4/wD/uP8A9Lj/AKy4/wDYuP8A/7j/AK+4/wAMAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAuP8AALj/AEu4/wD3uP8A/7j/AKq4/wBmuP8A7bj/AP+4/wDRuP8AE7j/ACW4/wB7uP8ALLj/
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAC4/wAAuP8ACLj/AHW4/wCfuP8AF7j/AAi4/wDBuP8A/7j/AMq4/wANuP8AALj/
+        AAC4/wAAuP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAALj/AAC4/wAAuP8AAbj/AAe4/wAAuP8AALj/AIu4/wD/uP8Ap7j/
+        AAi4/wAAuP8AALj/AAC4/wAAwAB//8AAf//AAAf/wAAD/8AAA/8AAAP/AAAD/wAAA/8AAAP/AAAD/wAA
+        A/8AIAH/ACAB/wAAAf8AAAAfAAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAA8AAAAPAAAADwAAAA8AAAAPwP
+        AAD//wAA//8AAP//wAD//8AA///AAP//wAA=
+</value>
+  </data>
 </root>
