--- a/HeroPecApp/Properties/Resources.resx
+++ b/HeroPecApp/Properties/Resources.resx
@@ -157,4 +157,7 @@
   <data name="_198198214" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\198198214.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="configuration" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\configuration.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
